--- a/styles/styleuser.css
+++ b/styles/styleuser.css
@@ -183,3 +183,12 @@ a:hover {
 .containerhidden {
   display: none;
 }
+
+.logouttext {
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  margin: 1rem;
+  cursor: pointer;
+  color: var(--secondarycolor);
+}
