--- a/styles/styleadmin.css
+++ b/styles/styleadmin.css
@@ -3,18 +3,20 @@
 body {
   --primarycolor: #ffad2e;
   --primarycolordark: #e9910e;
-  --secondarycolor: #6868ac;
-  --errorcolor: #d42222;
+  --secondarycolor: #1c77bd;
+  --secondarycolordark: #0d5a94;
+  --errorcolor: #8a0303;
   --successcolor: #33c729;
 
-  font-family: "Baloo Bhaijaan 2", Arial;
+  font-family: "Baloo Bhaijaan 2", Arial !important;
+  color: #080808 !important;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   margin: 0;
   padding: 0;
   height: 100vh;
-  background: url(./../images/background1.jpg);
+  background: url(./../images/background2.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -24,19 +26,43 @@ body {
 .container {
   width: 300px;
   max-width: 300px;
-  margin: 3rem;
+  margin: 1rem;
+  padding: 2rem;
+  padding-bottom: 0.5rem;
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  background: #1c77bd;
+  opacity: 95%;
+}
+
+.booking {
+  width: 300px;
+  max-width: 300px;
+  margin: 1rem;
   padding: 2rem;
   padding-bottom: 0.5rem;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   background: #ffffff;
-  opacity: 95%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .logoandtext {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
+}
+
+#gergarage {
+  font-weight: bold;
+}
+
+#logo {
+  margin-right: 10px;
 }
 
 img {
@@ -46,11 +72,6 @@ img {
 .title {
   display: flex;
   justify-content: center;
-}
-
-.texttoleft {
-  justify-content: left;
-  margin: 0.1rem;
 }
 
 .label-float {
@@ -72,22 +93,6 @@ input {
   background: #eeeeee;
   transition: background 0.2s, border-color 0.2s;
   margin-bottom: 0.7rem;
-}
-
-textarea {
-  display: block;
-  width: 100%;
-  height: 40px;
-  padding: 0.75rem;
-  box-sizing: border-box;
-  border-radius: 5px;
-  border: 1px solid #dddddd;
-  outline: none;
-  background: #eeeeee;
-  transition: background 0.2s, border-color 0.2s;
-  margin-bottom: 0.7rem;
-  resize: none;
-  font-family: "Baloo Bhaijaan 2", Arial;
 }
 
 input:focus {
@@ -121,19 +126,13 @@ button:active {
   transform: scale(0.98);
 }
 
-.errormsg {
-  font-size: 12px;
-  color: var(--errorcolor);
-  margin: 0px;
-}
-
 .justify-center {
   justify-content: center;
   text-align: center;
 }
 
 a {
-  color: var(--secondarycolor);
+  color: var(--primarycolordark);
   font-weight: bold;
   text-decoration: none;
   transition: all 0.3s ease-out;
@@ -143,10 +142,8 @@ a:hover {
   color: #1a1457;
 }
 
-.containerhidden {
-  display: none;
-}
-
-#comments {
-  height: 80px;
+.errormsg {
+  font-size: 12px;
+  color: var(--errorcolor);
+  margin: 0px;
 }
