--- a/styles/styleadmin3.css
+++ b/styles/styleadmin3.css
@@ -7,14 +7,15 @@ body {
   --errorcolor: #d42222;
   --successcolor: #33c729;
 
-  font-family: "Baloo Bhaijaan 2", Arial;
+  font-family: "Baloo Bhaijaan 2", Arial !important;
+  color: #080808 !important;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   margin: 0;
   padding: 0;
   height: 100vh;
-  background: url(./../images/background1.jpg);
+  background: url(./../images/background2.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -29,7 +30,7 @@ body {
   padding-bottom: 0.5rem;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  background: #ffffff;
+  background: var(--primarycolor);
   opacity: 95%;
 }
 
@@ -37,27 +38,36 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  margin-bottom: 2rem;
 }
 
-img {
+#gergarage {
+  font-weight: bold;
+}
+
+#logo {
   margin-right: 10px;
 }
 
 .title {
   display: flex;
   justify-content: center;
+  font-size: 18px;
+  margin: 1rem;
 }
 
 .texttoleft {
-  justify-content: left;
-  margin: 0.1rem;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .label-float {
   position: relative;
-  padding-top: 3px;
-  margin-top: 2%;
-  margin-bottom: 2%;
+  padding-top: 2px;
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
 
 input {
@@ -74,10 +84,39 @@ input {
   margin-bottom: 0.7rem;
 }
 
-textarea {
+input:focus {
+  border-color: var(--primarycolor);
+  background: #ffffff;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+select {
   display: block;
   width: 100%;
   height: 40px;
+  padding: 0.5rem;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 1px solid #dddddd;
+  outline: none;
+  background: #eeeeee;
+  transition: background 0.2s, border-color 0.2s;
+  margin-bottom: 0.7rem;
+}
+
+textarea {
+  display: block;
+  width: 100%;
+  height: 80px;
   padding: 0.75rem;
   box-sizing: border-box;
   border-radius: 5px;
@@ -90,7 +129,7 @@ textarea {
   font-family: "Baloo Bhaijaan 2", Arial;
 }
 
-input:focus {
+textarea:focus {
   border-color: var(--primarycolor);
   background: #ffffff;
 }
@@ -102,19 +141,19 @@ button {
   font-weight: bold;
   font-size: 1.05rem;
   color: #080808;
-  border: none;
-  border-radius: 5px;
+  border: none !important;
+  border-radius: 5px !important;
   outline: none;
   cursor: pointer;
-  background: var(--primarycolor);
-  margin-bottom: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background: #ffffff;
+  margin-bottom: 1rem !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
 }
 
 button:hover {
-  background: var(--primarycolordark);
+  background: #dddddd;
 }
 
 button:active {
@@ -124,12 +163,15 @@ button:active {
 .errormsg {
   font-size: 12px;
   color: var(--errorcolor);
-  margin: 0px;
 }
 
 .justify-center {
   justify-content: center;
   text-align: center;
+  /*display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;*/
 }
 
 a {
@@ -147,6 +189,11 @@ a:hover {
   display: none;
 }
 
-#comments {
-  height: 80px;
+.logouttext {
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  margin: 1rem;
+  cursor: pointer;
+  color: var(--secondarycolor);
 }
