--- a/styles/styleadmin.css
+++ b/styles/styleadmin.css
@@ -24,8 +24,8 @@ body {
 }
 
 .container {
-  width: 300px;
-  max-width: 300px;
+  width: 400px;
+  max-width: 400px;
   margin: 1rem;
   padding: 2rem;
   padding-bottom: 0.5rem;
@@ -38,14 +38,48 @@ body {
 .booking {
   width: 300px;
   max-width: 300px;
-  margin: 1rem;
-  padding: 2rem;
+  margin: 0.3rem;
+  padding: 0.5rem;
   padding-bottom: 0.5rem;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  background: #ffffff;
+  background: var(--primarycolordark);
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  cursor: pointer;
+  border: 2px solid #868686;
+}
+
+.booking:hover {
+  border: 2px solid #dddddd;
+}
+
+.paragbooking {
+  font-size: 13px;
+  margin: 0px;
+}
+
+.headerbooking {
+  font-size: 18px;
+  margin: 0px;
+}
+
+.headerrow {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  margin: 0rem;
+  margin-bottom: 0.2rem;
+}
+
+.rowdirection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.center {
   align-items: center;
   justify-content: center;
 }
@@ -55,6 +89,7 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin-bottom: 2rem;
 }
 
 #gergarage {
@@ -98,6 +133,17 @@ input {
 input:focus {
   border-color: var(--primarycolor);
   background: #ffffff;
+}
+
+select {
+  display: block;
+  width: 100%;
+  height: 35px;
+  border-radius: 5px;
+  border: 1px solid #dddddd;
+  outline: none;
+  background: #eeeeee;
+  margin-bottom: 0.7rem;
 }
 
 button {
