--- a/styles/styleadmin3.css
+++ b/styles/styleadmin3.css
@@ -3,17 +3,13 @@
 body {
   --primarycolor: #ffad2e;
   --primarycolordark: #e9910e;
-  --secondarycolor: #6868ac;
-  --errorcolor: #d42222;
+  --secondarycolor: #1c77bd;
+  --secondarycolordark: #0d5a94;
+  --errorcolor: #8a0303;
   --successcolor: #33c729;
 
   font-family: "Baloo Bhaijaan 2", Arial !important;
   color: #080808 !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
   height: 100vh;
   background: url(./../images/background2.jpg);
   background-size: cover;
@@ -23,15 +19,16 @@ body {
 }
 
 .container {
-  width: 300px;
-  max-width: 300px;
-  margin: 3rem;
-  padding: 2rem;
-  padding-bottom: 0.5rem;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  background: var(--primarycolor);
+  background: #1c77bd;
   opacity: 95%;
+  margin: 1rem;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .logoandtext {
@@ -39,7 +36,6 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: 30px;
   margin-bottom: 2rem;
 }
 
@@ -51,149 +47,47 @@ body {
   margin-right: 10px;
 }
 
-.title {
-  display: flex;
-  justify-content: center;
-  font-size: 18px;
-  margin: 1rem;
-}
-
-.texttoleft {
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.label-float {
-  position: relative;
-  padding-top: 2px;
-  margin-top: 1%;
-  margin-bottom: 1%;
-}
-
-input {
-  display: block;
-  width: 100%;
-  height: 40px;
-  padding: 0.75rem;
-  box-sizing: border-box;
-  border-radius: 5px;
-  border: 1px solid #dddddd;
-  outline: none;
-  background: #eeeeee;
-  transition: background 0.2s, border-color 0.2s;
-  margin-bottom: 0.7rem;
-}
-
-input:focus {
-  border-color: var(--primarycolor);
-  background: #ffffff;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-input[type="number"] {
-  -moz-appearance: textfield;
-}
-
 select {
   display: block;
   width: 100%;
-  height: 40px;
+  height: 35px;
+  border-radius: 5px;
+  border: 1px solid #dddddd;
+  outline: none;
+  background: #eeeeee;
+  margin-bottom: 0.7rem;
+}
+
+.booking {
+  margin: 0.3rem;
   padding: 0.5rem;
-  box-sizing: border-box;
+  padding-bottom: 0.5rem;
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  border: 1px solid #dddddd;
-  outline: none;
-  background: #eeeeee;
-  transition: background 0.2s, border-color 0.2s;
-  margin-bottom: 0.7rem;
-}
-
-textarea {
-  display: block;
-  width: 100%;
-  height: 80px;
-  padding: 0.75rem;
-  box-sizing: border-box;
-  border-radius: 5px;
-  border: 1px solid #dddddd;
-  outline: none;
-  background: #eeeeee;
-  transition: background 0.2s, border-color 0.2s;
-  margin-bottom: 0.7rem;
-  resize: none;
-  font-family: "Baloo Bhaijaan 2", Arial;
-}
-
-textarea:focus {
-  border-color: var(--primarycolor);
-  background: #ffffff;
-}
-
-button {
-  width: 100%;
-  height: 40px;
-  padding: 1rem 1rem;
-  font-weight: bold;
-  font-size: 1.05rem;
-  color: #080808;
-  border: none !important;
-  border-radius: 5px !important;
-  outline: none;
+  background: var(--primarycolordark);
+  font-size: 14px;
   cursor: pointer;
-  background: #ffffff;
-  margin-bottom: 1rem !important;
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
+  border: 2px solid #868686;
 }
 
-button:hover {
-  background: #dddddd;
+.booking:hover {
+  border: 2px solid #dddddd;
 }
 
-button:active {
-  transform: scale(0.98);
+.paragbooking {
+  font-size: 13px;
+  margin: 0px;
 }
 
-.errormsg {
-  font-size: 12px;
-  color: var(--errorcolor);
+.headerbooking {
+  font-size: 16px;
+  margin: 0px;
 }
 
-.justify-center {
-  justify-content: center;
-  text-align: center;
-  /*display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: center;*/
-}
-
-a {
-  color: var(--secondarycolor);
-  font-weight: bold;
-  text-decoration: none;
-  transition: all 0.3s ease-out;
-}
-
-a:hover {
-  color: #1a1457;
-}
-
-.containerhidden {
-  display: none;
-}
-
-.logouttext {
+.headerrow {
   display: flex;
-  justify-content: center;
-  font-size: 18px;
-  margin: 1rem;
-  cursor: pointer;
-  color: var(--secondarycolor);
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0rem;
+  margin-bottom: 0.2rem;
 }
