--- a/styles/stylebookingdetails.css
+++ b/styles/stylebookingdetails.css
@@ -104,6 +104,7 @@ body {
   align-items: center;
   margin: 0rem;
   margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
   background-color: var(--primarycolor);
   border-radius: 5px;
 }
@@ -133,7 +134,7 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: left;
-  margin-top: 0.5rem;
+  margin-top: 0.8rem;
 }
 
 #bookingcontainerchange {
@@ -166,15 +167,15 @@ select {
 }
 
 .paraginvoice {
-  font-size: 14px;
+  font-size: 16px;
   margin: 0px;
   margin-right: 0.5rem;
 }
 
 #invoice {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: left;
   justify-content: center;
 }
 
@@ -183,10 +184,53 @@ select {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  color: var(--errorcolor);
   margin: 0.5rem;
 }
 
 .paraginvoicetotal {
   font-size: 18px;
+}
+
+button {
+  width: 50%;
+  height: 40px;
+  padding: 1rem 1rem;
+  font-weight: bold;
+  font-size: 1.05rem;
+  color: #080808;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+  background: var(--secondarycolor);
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button:hover {
+  background: var(--secondarycolordark);
+}
+
+button:active {
+  transform: scale(0.98);
+}
+
+input {
+  display: block;
+  height: 33px;
+  padding: 0.75rem;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 1px solid #dddddd;
+  outline: none;
+  background: #eeeeee;
+  transition: background 0.2s, border-color 0.2s;
+  margin-bottom: 0.7rem;
+}
+
+input:focus {
+  border-color: var(--primarycolor);
+  background: #ffffff;
 }
