Invoice, LastDetais, Delete
Invoice page add
LastDetails button in booking
Delete function of bookingdetails

--- a/styles/stylebooking.css
+++ b/styles/stylebooking.css
@@ -198,3 +198,8 @@ a:hover {
   cursor: pointer;
   color: var(--secondarycolor);
 }
+
+#lastdetailsbutton {
+  background-color: var(--secondarycolor);
+  color: #ffffff;
+}
