--- a/styles/styleadmin.css
+++ b/styles/styleadmin.css
@@ -1,3 +1,6 @@
+/*CSS style of admin.html page
+@name: Gabriel Jucá
+*/
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400;500;600;700;800&display=swap");
 
 body {
