--- a/styles/styleroster.css
+++ b/styles/styleroster.css
@@ -1,3 +1,7 @@
+/*CSS style of roster.html page
+@name: Gabriel Jucá
+*/
+
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400;500;600;700;800&display=swap");
 
 body {
